Training_Experiment_Applications/4.Application_microservices_test_solution/1.springmvc-microservices-example_solution/recipes/kubernetes/manifests/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-ingress
  namespace: spring-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-app-service
            port:
              number: 8080
  tls:
  - hosts:
    - myapp.example.com
    secretName: my-tls-secret
